--- a/src/client/Client/Pages/Locks/Modals/LockPreviewerModal.razor
+++ b/src/client/Client/Pages/Locks/Modals/LockPreviewerModal.razor
@@ -1,7 +1,16 @@
 ﻿<MudContainer MaxWidth="MaxWidth.False" Style="max-height: 80vh; overflow-y: scroll">
-    <MudDialog DisableSidePadding="true" ClassActions="px-2 py-4">
+    <MudDialog DisableSidePadding="true" ClassActions="px-2 py-4" ClassContent="pt-0">
+        <TitleContent>
+            <div>
+                <MudText Typo="Typo.h6">Lock #@LockIndex</MudText>
+                @if (IsLoaded)
+                {
+                    <MudChip Size="Size.Small" Class="ma-0 mt-1" Color="Color.Primary" Variant="Variant.Text" OnClick="OnCopyShareLinkAsync">@ShareLink</MudChip>
+                }
+            </div>
+        </TitleContent>
         <DialogContent>
-            <MudGrid Class="pt-0 pb-4" Spacing="2">
+            <MudGrid Class="pt-0 pb-4" Spacing="1">
                 @if (!IsLoaded)
                 {
                     <MudItem xs="12">
@@ -12,7 +21,7 @@
                 {
                     <MudItem xs="12" md="6">
                         <div>
-                            <MudText Typo="Typo.body1" Class="text-white mb-2"><b>Initiator</b></MudText>
+                            <MudText Typo="Typo.caption" Class="text-white mb-2"><b>Initiator</b></MudText>
                             <MudHidden Breakpoint="Breakpoint.Xs" Invert="true">
                                 <MudText Typo="Typo.body1" Class="text-white mb-2">@Model.InitiatorAddressDisplay.ToMask(6)</MudText>
 
@@ -26,42 +35,42 @@
 
                     <MudItem xs="12" md="6">
                         <div>
-                            <MudText Typo="Typo.body1" Class="text-white mb-2"><b>Status</b></MudText>
+                            <MudText Typo="Typo.caption" Class="text-white mb-2"><b>Status</b></MudText>
                             <MudText Typo="Typo.body1" Class="text-white mb-2">@Model.StatusDisplay</MudText>
                         </div>
                     </MudItem>
 
                     <MudItem xs="12" md="6">
                         <div>
-                            <MudText Typo="Typo.body1" Class="text-white mb-2"><b>Date Start</b></MudText>
+                            <MudText Typo="Typo.caption" Class="text-white mb-2"><b>Date Start</b></MudText>
                             <MudText Typo="Typo.body1" Class="text-white mb-2">@Model.DateStartDisplay</MudText>
                         </div>
                     </MudItem>
 
                     <MudItem xs="12" md="6">
                         <div>
-                            <MudText Typo="Typo.body1" Class="text-white mb-2"><b>Date Unlock</b></MudText>
+                            <MudText Typo="Typo.caption" Class="text-white mb-2"><b>Date Unlock</b></MudText>
                             <MudText Typo="Typo.body1" Class="text-white mb-2">@Model.DateUnlockDisplay</MudText>
                         </div>
                     </MudItem>
 
                     <MudItem xs="12" md="6">
                         <div>
-                            <MudText Typo="Typo.body1" Class="text-white mb-2"><b>Revocable</b></MudText>
+                            <MudText Typo="Typo.caption" Class="text-white mb-2"><b>Revocable</b></MudText>
                             <MudText Typo="Typo.body1" Class="text-white mb-2">@Model.RevocableDisplay</MudText>
                         </div>
                     </MudItem>
 
                     <MudItem xs="12" md="6">
                         <div>
-                            <MudText Typo="Typo.body1" Class="text-white mb-2"><b>Total Amount</b></MudText>
+                            <MudText Typo="Typo.caption" Class="text-white mb-2"><b>Total Amount</b></MudText>
                             <MudText Typo="Typo.body1" Class="text-white mb-2">@Model.TotalAmountDisplay</MudText>
                         </div>
                     </MudItem>
 
                     <MudItem xs="12">
                         <div>
-                            <MudText Typo="Typo.body1" Class="text-white mb-2"><b>Receivers</b></MudText>
+                            <MudText Typo="Typo.caption" Class="text-white mb-2"><b>Receivers</b></MudText>
                             <MudTable Items="@Model.Transaction.Receivers" Class="mx-0 grey darken-4" Context="receiverContext" Elevation="10" Breakpoint="Breakpoint.Sm">
                                 <HeaderContent>
                                     <MudTh>Address</MudTh>
