--- a/src/client/Client/Pages/Locks/Modals/AssetLockPreviewerModal.razor
+++ b/src/client/Client/Pages/Locks/Modals/AssetLockPreviewerModal.razor
@@ -1,7 +1,7 @@
 ﻿<MudContainer MaxWidth="MaxWidth.False" Style="max-height: 80vh; overflow-y: scroll">
-    <MudDialog DisableSidePadding="true" ClassActions="px-2 py-4">
+    <MudDialog DisableSidePadding="true" ClassActions="px-2 py-4"  ClassContent="pt-0">
         <DialogContent>
-            <MudGrid Class="pt-0 pb-4">
+            <MudGrid Class="pt-0 pb-4" Spacing="1">
                 @if (!IsLoaded)
                 {
                     <MudItem xs="12">
@@ -12,14 +12,14 @@
                 {
                     <MudItem xs="12" md="6">
                         <div>
-                            <MudText Typo="Typo.body1"><b>Token</b></MudText>
+                            <MudText Typo="Typo.caption"><b>Token</b></MudText>
                             <MudText Typo="Typo.body1">@AssetCounterModel.AssetToken.Name (@AssetCounterModel.AssetToken.Symbol)</MudText>
                         </div>
                     </MudItem>
 
                     <MudItem xs="12" md="6">
                         <div>
-                            <MudText Typo="Typo.body1"><b>Token ScriptHash</b></MudText>
+                            <MudText Typo="Typo.caption"><b>Token ScriptHash</b></MudText>
                             <MudHidden Breakpoint="Breakpoint.Xs" Invert="true">
                                 <MudText Typo="Typo.body1">@AssetCounterModel.AssetToken.AssetScriptHash.ToString().ToMask(6)</MudText>
                             </MudHidden>
@@ -31,21 +31,21 @@
 
                     <MudItem xs="12" md="6">
                         <div>
-                            <MudText Typo="Typo.body1" Class="text-white mb-2"><b>Locked Amount</b></MudText>
+                            <MudText Typo="Typo.caption" Class="text-white mb-2"><b>Locked Amount</b></MudText>
                             <MudText Typo="Typo.body1" Class="text-white mb-2">@AssetCounterModel.LockedAmountDisplay</MudText>
                         </div>
                     </MudItem>
 
                     <MudItem xs="12" md="6">
                         <div>
-                            <MudText Typo="Typo.body1" Class="text-white mb-2"><b>Unlocked Amount</b></MudText>
+                            <MudText Typo="Typo.caption" Class="text-white mb-2"><b>Unlocked Amount</b></MudText>
                             <MudText Typo="Typo.body1" Class="text-white mb-2">@AssetCounterModel.UnlockedAmountDisplay</MudText>
                         </div>
                     </MudItem>
 
                     <MudItem xs="12">
                         <div>
-                            <MudText Typo="Typo.body1" Class="text-white mb-2"><b>Locks</b></MudText>
+                            <MudText Typo="Typo.caption" Class="text-white mb-2"><b>Locks</b></MudText>
 
                             <MudTable Items="@Transactions" Class="mx-0 grey darken-4" Context="transactionContext" Elevation="10" Breakpoint="Breakpoint.Sm">
                                 <HeaderContent>
