--- a/src/client/Client/_Imports.razor
+++ b/src/client/Client/_Imports.razor
@@ -45,5 +45,4 @@
 @inject IAppDialogService AppDialogService
 @inject AppBreakpointService AppBreakpointService
 @inject ClipboardService ClipboardService
-@*@inject FetchDataExecutor FetchDataExecutor
-@inject RenderUIExecutor RenderUIExecutor*@
+@inject PageService PageService
