--- a/src/client/Client/Pages/Locks/Modals/ClaimLockRefundModal.razor
+++ b/src/client/Client/Pages/Locks/Modals/ClaimLockRefundModal.razor
@@ -7,7 +7,7 @@
                     <MudGrid Class="pt-0 pb-4" Spacing="2">
                         <MudItem xs="12">
                             <MudText Typo="Typo.body1" Class="text-white">
-                                <span>You are about to claim a refund of <b>@Model.AmountDisplay</b>?</span>
+                                <span>You are about to claim a refund of <b>@Model.AmountDisplay</b>.</span>
                             </MudText>
                         </MudItem>
                     </MudGrid>
