--- a/src/client/Client/Pages/Vestings/Modals/VestingPeriodPreviewerModal.razor
+++ b/src/client/Client/Pages/Vestings/Modals/VestingPeriodPreviewerModal.razor
@@ -22,7 +22,7 @@
 
                         @if (Receivers.Any())
                         {
-                            <MudTable Items="Receivers" Context="receiverContext" Elevation="0" Breakpoint="Breakpoint.Sm">
+                            <MudTable Items="Receivers" Context="receiverContext" Class="mx-0 grey darken-4" Breakpoint="Breakpoint.Sm">
                                 <HeaderContent>
                                     <MudTh>Name</MudTh>
                                     <MudTh>Address</MudTh>
