--- a/src/client/Client/Pages/Locks/Modals/LockPreviewerModal.razor
+++ b/src/client/Client/Pages/Locks/Modals/LockPreviewerModal.razor
@@ -21,9 +21,28 @@
                 {
                     <MudItem xs="12" md="6">
                         <div>
+                            <MudText Typo="Typo.caption" Class="text-white mb-2"><b>Token</b></MudText>
+                            <MudText Typo="Typo.body1" Class="text-white mb-2">@Model.AssetToken.Name (@Model.AssetToken.Symbol)</MudText>
+                        </div>
+                    </MudItem>
+
+                    <MudItem xs="12" md="6">
+                        <div>
+                            <MudText Typo="Typo.caption" Class="text-white mb-2"><b>Token ScriptHash</b></MudText>
+                            <MudHidden Breakpoint="Breakpoint.Xs" Invert="true">
+                                <MudText Typo="Typo.body1" Class="text-white mb-2">@Model.AssetToken.AssetScriptHash.ToString().ToMask(10)</MudText>
+                            </MudHidden>
+                            <MudHidden Breakpoint="Breakpoint.SmAndUp" Invert="true">
+                                <MudText Typo="Typo.body1" Class="text-white mb-2">@Model.AssetToken.AssetScriptHash.ToString()</MudText>
+                            </MudHidden>
+                        </div>
+                    </MudItem>
+
+                    <MudItem xs="12" md="6">
+                        <div>
                             <MudText Typo="Typo.caption" Class="text-white mb-2"><b>Initiator</b></MudText>
                             <MudHidden Breakpoint="Breakpoint.Xs" Invert="true">
-                                <MudText Typo="Typo.body1" Class="text-white mb-2">@Model.InitiatorAddressDisplay.ToMask(6)</MudText>
+                                <MudText Typo="Typo.body1" Class="text-white mb-2">@Model.InitiatorAddressDisplay.ToMask(10)</MudText>
 
                             </MudHidden>
                             <MudHidden Breakpoint="Breakpoint.SmAndUp" Invert="true">
